--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,12 +18,12 @@
 
         <ion-item>
           <ion-label>Username</ion-label>
-          <ion-input type="username"></ion-input>
+          <ion-input type="text" [(ngModel)]="userData.email"></ion-input>
           </ion-item>
       
       <ion-item>
           <ion-label>Password</ion-label>
-          <ion-input type="password"></ion-input> 
+          <ion-input type="password" [(ngModel)]="userData.password"></ion-input> 
           
       </ion-item>
       </ion-list>
